tests/ui/transmutability/primitives/bool-mut.stderr
error[E0277]: `u8` cannot be safely transmuted into `bool`
  --> $DIR/bool-mut.rs:14:50
   |
LL |     assert::is_transmutable::<&'static mut bool, &'static mut u8>()
   |                                                  ^^^^^^^^^^^^^^^ at least one value of `u8` isn't a bit-valid value of `bool`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/bool-mut.rs:9:14
   |
LL |     pub fn is_transmutable<Src, Dst>()
   |            --------------- required by a bound in this function
LL |     where
LL |         Dst: TransmuteFrom<Src, { Assume::SAFETY }>
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
